Bottom Navigation, home fragment with two tab layouts was added.

--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -3,14 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.file.FileFragment"
-    android:gravity="center">
+    tools:context=".ui.home.HomeTabLayout.TimelineFragment"
+    android:background="#70BBF6"
+    android:id="@+id/fragment_container2">
 
-    <!-- TODO: Update blank fragment layout -->
-    <Button
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="HELLO"
-        android:gravity="center"/>
+        android:text="TimeLine Fragment"
+        android:textColor="#FF0000"
+        android:textSize="30sp"
+        android:layout_centerInParent="true"
+        android:textStyle="italic"/>
 
 </RelativeLayout>
