--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -3,14 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.file.FileFragment"
-    android:gravity="center">
+    tools:context=".ui.home.HomeTabLayout.DashboardFragment"
+    android:background="#EA6868"
+    android:id="@+id/fragment_container1">
 
-    <!-- TODO: Update blank fragment layout -->
-    <Button
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="HELLO"
-        android:gravity="center"/>
+        android:text="Dashboard Fragment"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
